Change background colour in dark mode. Fixes #20

--- a/client/src/css/styles.scss
+++ b/client/src/css/styles.scss
@@ -291,6 +291,11 @@ p {
   box-shadow: none;
 }
 
+.dark .page-item .page-link {
+  background: $theme-dark-background;
+  border-color: $theme-dark-background2;
+}
+
 .dark img {
   border: 0;
 }
